RESOLVED FIXED277515
DNS filtering not flagging expected domains
https://bugs.webkit.org/show_bug.cgi?id=277515
Summary DNS filtering not flagging expected domains
Guoye Zhang
Reported 2024-08-01 15:24:56 PDT
rdar://132952350 (DNS filtering not flagging expected domains)
Attachments
Guoye Zhang
Comment 1 2024-08-01 15:25:19 PDT
<rdar://problem/132952350> DNS filtering not flagging expected domains
Guoye Zhang
Comment 2 2024-08-01 15:32:27 PDT
EWS
Comment 3 2024-08-01 16:27:56 PDT
Committed 281735@main (d89cd1cf5382): <https://commits.webkit.org/281735@main> Reviewed commits have been landed. Closing PR #31614 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.