DNS filtering not flagging expected domains https://bugs.webkit.org/show_bug.cgi?id=277515 rdar://132952350 (DNS filtering not flagging expected domains)

Reviewed by Alex Christensen.

The new network loader puts information in the top level user info dictionary instead of the underlying error's user info dictionary.

* Source/WebCore/platform/network/mac/ResourceErrorMac.mm:
(WebCore::ResourceError::blockedKnownTracker const):
(WebCore::ResourceError::blockedTrackerHostName const):
* Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(-[WKNetworkSessionDelegate URLSession:task:didCompleteWithError:]):

Canonical link: https://commits.webkit.org/281735@main